WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156928
WKWebView WebSQL is not enabled
https://bugs.webkit.org/show_bug.cgi?id=156928
Summary
WKWebView WebSQL is not enabled
Anders Carlsson
Reported
2016-04-22 13:51:38 PDT
WKWebView WebSQL is not enabled
Attachments
Patch
(2.02 KB, patch)
2016-04-22 13:54 PDT
,
Anders Carlsson
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-04-22 13:54:06 PDT
Created
attachment 277095
[details]
Patch
Anders Carlsson
Comment 2
2016-04-22 14:06:29 PDT
Committed
r199901
: <
http://trac.webkit.org/changeset/199901
>
David Kilzer (:ddkilzer)
Comment 3
2016-04-27 14:03:59 PDT
***
Bug 137760
has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 4
2016-04-27 14:04:18 PDT
<
rdar://problem/19029603
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug