WKWebView WebSQL is not enabled https://bugs.webkit.org/show_bug.cgi?id=156928 rdar://problem/19029603

Reviewed by Beth Dakin.

Give databases a default quota of 50 MB, matching what we have in UIWebView.

* UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::exceededDatabaseQuota):

Canonical link: https://commits.webkit.org/175027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199901 268f45cc-cd09-0410-ab3c-d52691b4dbfc